tests/paczka1/fuzzy1/95421034.err
Error in line 5: 7A42OuGa A314 15,8
Error in line 15: 7A42OuGa S945 18,9
Error in line 14: aEDCSOZnTH S914 96,3
Error in line 29: d6O0ym S204 42,6
Error in line 35: 03dpqs S914 77,89
